# sentiment-analysis

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Containerfile  README.md  app.py  build_container.sh  openapi3_1.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  build_and_merge.yml  smoke_test.yml
docker/: compose.e2e.yml  compose.yml
sentiment_analysis/: __init__.py  __main__.py  api_xlmrobertabase.py  config.py  decorators.py  log.py  longformer.py  longformer_sentiment.py  predictor_factory.py  roberta.py  roberta_sentiment.py  router.py  sentiment_analysis_multimodel.py  sentiment_analysis_xlmrobertabase.py
sentiment_analysis/api/: api_multimodel.py  api_xlmrobertabase.py
sentiment_analysis/tests/: conftest.py  long_text.txt  test_analysis.py
tests/: conftest.py  test_function.py  test_offline_startup.py
